// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API test getPrompts, no prompt options 1`] = `
[
  {
    "default": "library1",
    "guiOptions": {
      "breadcrumb": true,
      "mandatory": true,
    },
    "message": "Library Module Name",
    "name": "libraryName",
    "type": "input",
    "validate": [Function],
  },
  {
    "default": "com.myorg",
    "guiOptions": {
      "breadcrumb": true,
      "mandatory": true,
    },
    "message": "Library Namespace",
    "name": "namespace",
    "type": "input",
    "validate": [Function],
  },
  {
    "default": "/mocked/cwd",
    "guiOptions": {
      "applyDefaultWhenDirty": true,
      "breadcrumb": true,
      "mandatory": true,
    },
    "guiType": "folder-browser",
    "message": "Library Folder Path",
    "name": "targetFolder",
    "type": "input",
    "validate": [Function],
  },
  {
    "choices": [Function],
    "guiOptions": {
      "breadcrumb": true,
      "hint": "Represents the minimum version of SAPUI5 that this library requires.",
    },
    "message": "Minimum SAPUI5 Version",
    "name": "ui5Version",
    "source": [Function],
    "type": "list",
    "when": [Function],
  },
  {
    "default": false,
    "guiOptions": {
      "breadcrumb": true,
    },
    "message": "Enable TypeScript (Experimental)",
    "name": "enableTypescript",
    "type": "confirm",
  },
]
`;

exports[`API test getPrompts, prompt options 1`] = `
[
  {
    "default": "library1",
    "guiOptions": {
      "breadcrumb": true,
      "mandatory": true,
    },
    "message": "Library Module Name",
    "name": "libraryName",
    "type": "input",
    "validate": [Function],
  },
  {
    "default": "com.myorg",
    "guiOptions": {
      "breadcrumb": true,
      "mandatory": true,
    },
    "message": "Library Namespace",
    "name": "namespace",
    "type": "input",
    "validate": [Function],
  },
  {
    "default": "some/target/folder/",
    "guiOptions": {
      "applyDefaultWhenDirty": true,
      "breadcrumb": true,
      "mandatory": true,
    },
    "guiType": "folder-browser",
    "message": "Library Folder Path",
    "name": "targetFolder",
    "type": "input",
    "validate": [Function],
  },
  {
    "choices": [Function],
    "guiOptions": {
      "breadcrumb": true,
      "hint": "Represents the minimum version of SAPUI5 that this library requires.",
    },
    "message": "Minimum SAPUI5 Version",
    "name": "ui5Version",
    "source": [Function],
    "type": "autocomplete",
    "when": [Function],
  },
  {
    "default": false,
    "guiOptions": {
      "breadcrumb": true,
    },
    "message": "Enable TypeScript (Experimental)",
    "name": "enableTypescript",
    "type": "confirm",
  },
]
`;
